# tactical-fitness-env

./: Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  setup.cfg
openenv_tactical_fitness_env.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
server/: Dockerfile.txt  __init__.py  app.py  tactical_fitness_env_environment.py  tactical_fitness_environment.py
tactical_fitness_env.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
